<resources>
    <string name="app_name">Carer\'s Application</string>
    <string name="notification_title">Out of Bound Alert</string>
    <string name="notification_text">Your patient has step out of the fence!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Dementia_Map</string>
    <string name="title_activity_create_fence">Create Fence</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_success">Success</string>

    <string name="create_fence_success">Fence created successfully</string>
    <string name="create_fence_failed">Could not create fence</string>
    <string name="update_fence_success">Fence updated successfully</string>
    <string name="update_fence_failed">Could not update fence</string>
    <string name="delete_fence_success">Fence deleted successfully</string>
    <string name="delete_fence_failed">Could not delete fence</string>
    <string name="title_activity_patient_setting">PatientSettingActivity</string>

    <string name="patient_setting_activity_title">Settings</string>
    <string name="patient_setting_fence_list_label">Create fence</string>
    <string name="patient_setting_enable_picked_up_mode">Picked up mode</string>
    <string name="patient_setting_enable_picked_up_mode_success">Picked up mode enabled</string>
    <string name="patient_setting_enable_picked_up_mode_failed">Cannot enable picked up mode</string>
    <string name="patient_setting_disable_picked_up_mode_success">Picked up mode disabled</string>
    <string name="patient_setting_disable_picked_up_mode_failed">Cannot disabled Picked up mode</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_login">Carer\'s Application</string>

    <string name="create_account"><u>Create New Account</u></string>
    <string name="already_a_member">Already A Member</string>
    <string name="fullname_hint">Full Name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="login_button_text">Login</string>
    <string name="create_button_text">Create</string>

    <string name="fullname_input_empty_error">Please enter your full name</string>
    <string name="username_input_empty_error">Please enter username</string>
    <string name="username_input_length_error">Username must have at least 6 characters</string>
    <string name="password_input_empty_error">Please enter password</string>
    <string name="confirm_password_wrong">Retyped password is not matched</string>
    <string name="role_select_error">Please select role</string>

    <string name="registration_failed">Couldn\'t create new account</string>
    <string name="registration_success">Account created</string>
    <string name="login_after_registration">Please login using your new account</string>

    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>

    <string name="signout">Sign out</string>

    <string name="add_a_new_patient">Add new patient</string>
    <string name="enter_username_of_patient">Enter the username of the patient you want to add</string>
    <string name="add_new_patient_activity_title">Add new patient</string>
    <string name="invitation_sent_successfully">Invitation has been sent</string>

    <string-array name="roles_array">
        <item>Select Role</item>
        <item>Carer</item>
        <item>Patient\'s Relative</item>
    </string-array>
	
    <string name="patient_setting_enable_location_history">Location History mode</string>
    <string name="patient_setting_enable_location_history_success">Location History enabled</string>
    <string name="patient_setting_enable_location_history_failed">Cannot enable Location History</string>
    <string name="patient_setting_disable_location_history_success">Location History disabled</string>
    <string name="patient_setting_disable_location_history_failed">Cannot disabled Location History</string>

    <string name="title_activity_add_new_patient">AddNewPatientActivity</string>
</resources>
